# chirico

./: .gitignore  README  README.md  index.html  junk  mdo  params.json  project.config
Documentation/: Notes
Documentation/Oracle/: Notes  Notes_dev  conn.c  load_sample.sql  login.sql  mdo  openadsidb.c  remote.c  whoami.sql  wrapper.sql
Documentation/gov/: Notes
apps/: Notes
apps/23isprime.appspot.com.ember.js/: app.yaml  helloworld.py  sample0.htm
apps/23isprime.appspot.com_Python2.7/: app.yaml  helloworld.py  mdo
apps/brainsquash.appspot.com/: app.yaml  cron.c  delete.c  helloworld.py  index.html  index.yaml  indexOrig.py  mdo  secure.py
apps/dev.mchirico.org/: Notes  cronindex.html  cstat.py  dataModels.py  mdo  notes.html  stuff.sh
apps/django_example/: app.yaml  index.yaml  mdo
apps/gpx/: Notes  app.yaml  index.py
apps/junk/: app.yaml  helloworld.py  index.html  index.yaml  mdo
apps/malodorous.org/: app.yaml  index.py  index.yaml  mdo
apps/mchirico.appspot.com/: app.yaml
apps/mchiricosecure.appspot.com.backends/: Notes  app.yaml  appengine_config.py  backends.yaml  counter.py  demo_frontend.py  (+11 more)
awk/: Notes  data  gateCheck.config  mtCmd.py  mythread.py
bash/: DEFINITIONS  MySQLbackup  NOTES  README  array_loop.sh  art  basharray1  bcfile1  bcsample1  bob  check_dsm  clean  diff_patch_sample  dirlistandvar  diskhog  email_ftp_changes  faqget  fileLIST  find1  find2  find_prune  forloop  fun1.sh  getopts  input.sh  kernelver  kill9user  listmount  listprocess  listprocess.c  loop.sh  mail.sh  max_script.sh  mftp  mreplace  mreturn  myMakeTar2  myMakeTar3  myloclns  mysql.sh  (+19 more)
c/: tcpkeepalive.c
c++/node/: ChangeLog  Makefile.am  Makefile.in  configure  configure.in  version.in
c++/node/man/: node.1
c++/node/src/: node.cc
c++/simple_but_common_cpp/: 3Dvector.cc  AUTHORS  ChangeLog  INSTALL  IstreamExample.h  Makefile  Makefile.am  Makefile.in  NOTES  README  TODO  access_to_private.cc  array_passing.cc  autoptr.cc  b.cc  b2.cc  cards.cc  class_template1.cc  compile-time_polymorphism.cc  configure  configure.in  copy_constructor_assignment.cc  copy_if_trans.cc  copy_output_list_vector.cc  cstr.cc  explicit.cc  explicit2.cc  ffo.cc  fib.cc  for_each_sum.cc  for_each_sum2.cc  funct_ptrs.cc  functionoids.cc  hanoi.cc  hollywood.cc  hollywood2.cc  hollywood3.cc  integrate.cc  integrate2.cc  iterswap.cc  (+37 more)
c++/simple_but_common_cpp/useful_classes/: Makefile  extract  extract.cc  extract.h  mysqlite3.h  simplesqlite3cpp2.cc  sqlite3api.cc  sqlite3apiHandler.cc
c/googlectools/: ChangeLog  Makefile.am  Makefile.in  README  THANKS  TODO  configure  configure.ac  mdo  version.in
c/googlectools/include/: _googlectools.h  googlectools.h
c/googlectools/lib/: googlectools.c
c/googlectools/man/: glogin.1
c/googlectools/src/: gauth.c  gauth2.c  gcal.c  gcookie.c  gcookie2.c  glogin.c  gpost.c  mytest.c
c/googlectools/src/examples/: ex1.c  gauth.c  gcookie.c  gpost.c
c/pipedup/: AUTHORS  ChangeLog  Makefile  Makefile.am  README  cmds  configure.ac  mftp
c/pipedup/man/: pipedup.1
c/pipedup/src/: pipedrv.c  pipedup.c  wrapper.h
c/simple_but_common/: ChangeLog  INSTALL  Makefile  Makefile.am  README  VERSION  aregex.c  ascii  atexit.c  base64.c  btree.c  buildarray.c  configure.ac  curses0.c  dnotify.c  eatblob.c  enum.cc  errno.c  funptr.c  gcd.c  gdbm_ex1.c  getline.c  getopt.c  getpid.c  getpwuid.c  hash.c  hole.c  http_post.c  inotify.c  kbhit.c  ls.c  mem_lock.c  mftp  mntquota.c  myassert.cc  mymm.c  open.c  opendir.c  openstrip.c  pam_example.c  (+36 more)
c/simple_but_common/separate_compilation/: Makefile  README  stuff.c  stuff.h  user.c
c/ssl_tls/: ChangeLog  INSTALL  Makefile.am  NOTES  TODO  VERSION  configure  configure.ac  mdo  mftp
c/ssl_tls/man/: tlsimap.1  tlstutorial.1
c/ssl_tls/src/: sslpop3.c  tlsimap.c  tlsserver.c  tlssmtp.c
c/stock/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  TODO  VERSION  configure  configure.ac  mdo  mftp  mftp2
c/stock/man/: stock.1
c/stock/scripts/: 136conameu.csv.1  Notes  getsector_list.pl  industry_rank.pl  log  mout
c/stock/src/: getopt.c  stock.c  stock2.c  stockb.c
doc/: Notes
emacs/: .emacs  Notes
git_usage/: Notes  gitconfig_example  mg  physiostat
go/: fanInOut.go  main.go  proc.go  xml.go  xml2.go  xml3.go  xmlB.go  xmlDebug.go  xmlTree.go  xmlappQ.go  xmlappread.go  xmlgarmin.go
iptables/: Attacks.py  AttacksAureport.py  Notes  US_ips  Update_iptables.py  getiscsans.py  getspamhausdrop.py  iptables
java/: A.java  AbstractRun.java  ApacheMath.java  B.java  C.java  CircleDraw.java  CmdExec.java  CmdExecPy.java  DiskFreeSpace.java  Echo.java  FileCopier.java  FooSerialized.java  ForIter.java  GridBag3.java  GridBagDev0.java  HashMapDemo.java  Hello.java  HelloFrame.java  HelloFrame1.java  IntArray.java  JDKConcurrentRun.java  Junk.java  Main.java  MyMap.java  MyReader.java  MyURL.java  P.java  PassByReference.java  PayRate.java  PlotFilter.java  Q.java  Ruler.java  SequentialRun.java  ShapesDemo2D.java  SimpleArray0.java  SimpleMenus.java  SimpleStringBuilder.java  Simple_int_Array.java  SocketMchirico.java  StdIn.java  (+21 more)
mac/: Notes
mathematica/: Notes  chirico.cdf  chirico.nb
minicom/: minirc.dfl
node/: Notes  elevatons_google.js  example.js  example2.js  hello.js  install_node_4.12.sh
python/: Active_flight_parse.py  List_tree.py  MySQL.py  Notes  append.py  atoi.py  awk.py  b.py  build_g.py  car.py  check_ntp.py  checkhttp.py  chirico.py  ciws_617.py  class.py  class0.py  class2.py  class3.py  configparser.py  cpu.py  curses1.py  curses2.py  curses3.py  cursesSimple.py  cursesSimple2.py  database.py  dates.py  debugread.py  decorator.py  def.py  delegation.py  dict0.py  displayNum.py  echo-client.py  echo-server.py  enumerate.py  expickle.py  flatten.py  flatten2.py  flattentry.py  (+64 more)
redis/: Notes  Notes_Tutorial
rpmbuild/: 2build  openadsi.spec
ruby/: Prime.rb  f.txt  friendly.rb  friendly2.rb  hello.rb  read.rb  read2.rb  redis_test.rb  sqlite_ex0.rb
ssh/: config
switch/: Notes  Notes_Routing1  Notes_dev  Notes_soekris30
web/: Notes
(+857 files in other folders)
