# class_template1: something changed
if HAVE_SQLITE
bin_PROGRAMS = sprog stoupper vectorD vheap access_to_private  compile_time_polymorphism copy_constructor_assignment copy_if_trans copy_output_list_vector for_each_sum2 for_each_sum functionoids funct_ptrs iterswap list2 list3b list3 list3c list0 permutation remove_if sqlite3api sqlite3apiHandler string_toupper vec2 vec strsplt  strchar virtualfunc namedcnstidiom array_passing hollywood hollywood2 hollywood3 fib integrate integrate2 raii cstr strfrmscratch rational rational2 rtrim rand stringstreamnum cards sort_input hanoi mtime autoptr resource_handle b b2 ostream_sample strategy_pattern state_pattern state_pattern2 istreamExample explicit explicit2

else

bin_PROGRAMS =  stoupper vectorD vheap access_to_private  compile_time_polymorphism copy_constructor_assignment copy_if_trans copy_output_list_vector for_each_sum2 for_each_sum functionoids funct_ptrs iterswap list2 list3b list3 list3c list0 permutation remove_if  string_toupper vec2 vec strsplt  strchar virtualfunc namedcnstidiom array_passing hollywood hollywood2 hollywood3 fib integrate integrate2 raii cstr strfrmscratch rational rational2 rtrim rand stringstreamnum cards sort_input hanoi mtime autoptr resource_handle b b2 ostream_sample strategy_pattern state_pattern state_pattern2 istreamExample explicit explicit2

endif


stoupper_SOURCES = string_toupper.cc
stoupper_LDADD = @INCLUDES@  @EXTRALIB@

sprog_SOURCES = sqlite3api.cc useful_classes/mysqlite3.h
sprog_LDADD =  @INCLUDES@ @SQLIBOBJS@ @EXTRALIB@ @SQLLIBS@

sqlite3apiHandler_SOURCES = sqlite3apiHandler.cc useful_classes/mysqlite3.h
sqlite3apiHandler_LDADD =  @INCLUDES@ @SQLIBOBJS@ @EXTRALIB@ @SQLLIBS@


vectorD_SOURCES = 3Dvector.cc
access_to_private_SOURCES = access_to_private.cc
#class_template1_SOURCES = class_template1.cc
compile_time_polymorphism_SOURCES = compile-time_polymorphism.cc
copy_constructor_assignment_SOURCES = copy_constructor_assignment.cc
copy_if_trans_SOURCES = copy_if_trans.cc
copy_output_list_vector_SOURCES = copy_output_list_vector.cc
for_each_sum2_SOURCES = for_each_sum2.cc
for_each_sum_SOURCES = for_each_sum.cc
functionoids_SOURCES = functionoids.cc
funct_ptrs_SOURCES = funct_ptrs.cc
iterswap_SOURCES = iterswap.cc
list2_SOURCES = list2.cc
list3b_SOURCES = list3b.cc
list3_SOURCES = list3.cc
list3c_SOURCES = list3c.cc
list0_SOURCES = list.cc
permutation_SOURCES = permutation.cc
remove_if_SOURCES = remove_if.cc
sqlite3api_SOURCES = sqlite3api.cc useful_classes/mysqlite3.h
string_toupper_SOURCES = string_toupper.cc
vec2_SOURCES = vec2.cc
vec_SOURCES = vec.cc
vheap_SOURCES = vec_on_heap.cc
strsplt_SOURCES = string_split.cc
#strspltt_SOURCES = string_splitTemplate.cc
strchar_SOURCES = string_and_char.cc
virtualfunc_SOURCES = virtual_function.cc 
namedcnstidiom_SOURCES =  namedconstructoridiom.cc
array_passing_SOURCES = array_passing.cc
hollywood_SOURCES = hollywood.cc
hollywood2_SOURCES = hollywood2.cc
hollywood3_SOURCES = hollywood3.cc
fib_SOURCES = fib.cc
integrate_SOURCES = integrate.cc
integrate2_SOURCES = integrate2.cc
raii_SOURCES = raii.cc
cstr_SOURCES = cstr.cc
strfrmscratch_SOURCES = string_from_scratch.cc
rational_SOURCES = rational.cc
rational2_SOURCES = rational2.cc
rtrim_SOURCES = rtrim.cc
rand_SOURCES = rand.cc
stringstreamnum_SOURCES = stringstream_num.cc
cards_SOURCES = cards.cc
sort_input_SOURCES = sort_input.cc
hanoi_SOURCES = hanoi.cc
mtime_SOURCES = time.cc
autoptr_SOURCES = autoptr.cc
resource_handle_SOURCES = resource_handle.cc
b_SOURCES = b.cc
b2_SOURCES = b2.cc
ostream_sample_SOURCES = ostream_sample.cc
strategy_pattern_SOURCES = strategy_pattern.cc
state_pattern_SOURCES = state_pattern.cc
state_pattern2_SOURCES = state_pattern2.cc
istreamExample_SOURCES = mainIstream.cc IstreamExample.h
explicit_SOURCES = explicit.cc
explicit2_SOURCES = explicit2.cc

vectorD_LDADD =   @INCLUDES@ @EXTRALIB@ 
access_to_private_LDADD =  @INCLUDES@ @EXTRALIB@ 
#class_template1_LDADD =  @INCLUDES@ @EXTRALIB@ 
compile_time_polymorphism_LDADD =  @INCLUDES@ @EXTRALIB@ 
copy_constructor_assignment_LDADD =  @INCLUDES@ @EXTRALIB@ 
copy_if_trans_LDADD =  @INCLUDES@ @EXTRALIB@ 
copy_output_list_vector_LDADD =  @INCLUDES@ @EXTRALIB@ 
for_each_sum2_LDADD =  @INCLUDES@ @EXTRALIB@ 
for_each_sum_LDADD =  @INCLUDES@ @EXTRALIB@ 
functionoids_LDADD =  @INCLUDES@ @EXTRALIB@
funct_ptrs_LDADD =  @INCLUDES@ @EXTRALIB@ 
iterswap_LDADD =  @INCLUDES@ @EXTRALIB@ 
list2_LDADD =  @INCLUDES@ @EXTRALIB@ 
list3b_LDADD =  @INCLUDES@ @EXTRALIB@ 
list3_LDADD =  @INCLUDES@ @EXTRALIB@ 
list3c_LDADD =  @INCLUDES@ @EXTRALIB@
list0_LDADD =  @INCLUDES@  @EXTRALIB@  
permutation_LDADD =  @INCLUDES@  @EXTRALIB@  
remove_if_LDADD =  @INCLUDES@  @EXTRALIB@ 
sqlite3api_LDADD =  @INCLUDES@ @SQLIBOBJS@ @EXTRALIB@ @SQLLIBS@ 
string_toupper_LDADD =  @INCLUDES@ @EXTRALIB@ 
vec2_LDADD =  @INCLUDES@ @EXTRALIB@ 
vec_LDADD =  @INCLUDES@ @EXTRALIB@ 
vheap_LDADD =  @INCLUDES@ @EXTRALIB@ 
strsplt_LDADD = @INCLUDES@ @EXTRALIB@ 
#strspltt_LDADD = @INCLUDES@ @EXTRALIB@ 
strchar_LDADD = @INCLUDES@ @EXTRALIB@ 
virtualfunc_LDADD = @INCLUDES@ @EXTRALIB@ 
namedcnstidiom_LDADD =  @INCLUDES@ @EXTRALIB@ 
array_passing_LDADD = @INCLUDES@ @EXTRALIB@ 
hollywood_LDADD = @INCLUDES@ @EXTRALIB@ 
hollywood2_LDADD = @INCLUDES@ @EXTRALIB@ 
hollywood3_LDADD = @INCLUDES@ @EXTRALIB@ 
fib_LDADD = @INCLUDES@ 
integrate_LDADD = @INCLUDES@ 
integrate2_LDADD = @INCLUDES@ 
raii_LDADD = @INCLUDES@ 
cstr_LDADD = @INCLUDES@ 
strfrmscratch_LDADD = @INCLUDES@ 
rational_LDADD = @INCLUDES@ 
rational2_LDADD = @INCLUDES@ 
rtrim_LDADD = @INCLUDES@ 
rand_LDADD = @INCLUDES@ 
stringstreamnum_LDADD = @INCLUDES@ 
cards_LDADD = @INCLUDES@ 
sort_input_LDADD = @INCLUDES@ 
hanoi_LDADD = @INCLUDES@ 
mtime_LDADD = @INCLUDES@
autoptr_LDADD = @INCLUDES@
resource_handle_LDADD = @INCLUDES@
b_LDADD = @INCLUDES@
b2_LDADD = @INCLUDES@
ostream_sample_LDADD = @INCLUDES@
strategy_pattern_LDADD = @INCLUDES@
state_pattern_LDADD = @INCLUDES@
state_pattern2_LDADD = @INCLUDES@
istreamExample_LDADD = @INCLUDES@
explicit_LDADD = @INCLUDES@
explicit2_LDADD = @INCLUDES@
