dnl Process this file with autoconf to produce a configure script.
AC_INIT(sqlite3api.cc)
AC_LANG_CPLUSPLUS
AC_PROG_CC

if test -f VERSION; then
  VERSION=`cat VERSION`
  echo "Version set to $VERSION"
else
  VERSION='0.0.0'
fi
AM_INIT_AUTOMAKE(simple_but_common_cpp, $VERSION )
AC_PROG_CXX
CXXFLAGS='-Wall -W -O2 -s -pipe -ftemplate-depth-50'


# 
# . . . . . . . . . . . . . . . . . . . . . . . . . . . . . -
define([_CHAR_TRAITS],
[AC_CACHE_CHECK([whether chartraits accepts "$1" mode], [char_traits_$1],
[AC_COMPILE_IFELSE([#include <string>
#include <iostream>
#include <cctype>

struct ic_traits : public std::char_traits<char> {
};
int main(void)
{
  return 0;

}],
            [char_traits_$1=yes],
            [char_traits_$1=no],
            [char_traits_$1=no])])
if test x$char_traits_$1 = xyes; then
  AC_DEFINE([$2], 1,
            [Define this if we can use the "$1" char_traits.])
fi[]dnl
])# _CHAR_TRAITS


AC_DEFUN([AB_CHAR_],   [_CHAR_TRAITS(t, USE_CTRAITS)])
AM_CONDITIONAL(CHAR_TRAITS,[AB_CHAR_])



AM_CONDITIONAL(HAVE_SQLITE, true)
TMPLIBS="$LIBS"
AC_CHECK_LIB(sqlite3,sqlite3_open,[],found=no)
 if test "$found" = "no"; then
   AC_CHECK_FILE(/usr/local/lib/libsqlite3.a, found=yes)
   if test "$found" = "yes"; then
     SQLLIBS="-lsqlite3 "
     INCLUDES="$INCLUDES -I/usr/local/include"
     EXTRALIB='-L/usr/local/lib'
    else
     AM_CONDITIONAL(HAVE_SQLITE, false)
     echo ""
     echo " -----------------------------------------------------------------------"
     echo "| Are you SURE sqlite3 is installed?                                    |"
     echo "|  You need to try this:                                                |"
     echo "|    export LDFLAGS='-L/usr/<some directory where sqlite is located>'   |"
     echo "|     ./configure                                                       |"
     echo " -----------------------------------------------------------------------" 
     echo "|  Will not compile the sqlite programs                                 |"
     echo " -----------------------------------------------------------------------" 
     echo ""
   fi
 else
   SQLLIBS="$LIBS"
   LIBS="$TMPLIBS"
 fi
SQLIBOBJS='-Wl,-R/usr/local/lib'
AC_SUBST(SQLLIBS)
AC_SUBST(INCLUDES)
AC_SUBST(SQLIBOBJS)
AC_SUBST(EXTRALIB)
AC_OUTPUT(Makefile)
