AUTOMAKE_OPTIONS = gnu

bin_PROGRAMS = btree dnotify errno getline getopt getpwuid ls mntquota open opendir openstrip  pipe pipedrv2 pipedrv pipe_dup2 popen printfLongdouble rand rawsockets read readrealloc realloc regex2 regexp rtctime server sizediff smtp syslog system uid_open atexit stdargs funptr readB signal_example vector

# This programs need additional config checks
# gdbm_ex1 pam_example pcap_ex1
#
funptr_SOURCES = funptr.c
btree_SOURCES = btree.c
dnotify_SOURCES = dnotify.c
errno_SOURCES = errno.c
#gdbm_ex1_SOURCES = gdbm_ex1.c
getline_SOURCES = getline.c
getopt_SOURCES = getopt.c
getpwuid_SOURCES = getpwuid.c
ls_SOURCES = ls.c
mntquota_SOURCES = mntquota.c
open_SOURCES = open.c
opendir_SOURCES = opendir.c
openstrip_SOURCES = openstrip.c
#pam_example_SOURCES = pam_example.c
#pcap_ex1_SOURCES = pcap_ex1.c
pipe_SOURCES = pipe.c
pipedrv2_SOURCES = pipedrv2.c
pipedrv_SOURCES = pipedrv.c
pipe_dup2_SOURCES = pipe_dup2.c
pipe_dup2_LDADD = -lutil
popen_SOURCES = popen.c
printfLongdouble_SOURCES = printfLongdouble.c
rand_SOURCES = rand.c
rawsockets_SOURCES = rawsockets.c
read_SOURCES = read.c
readrealloc_SOURCES = readrealloc.c
realloc_SOURCES = realloc.c
regex2_SOURCES = regex2.c
regexp_SOURCES = regexp.c
rtctime_SOURCES = rtctime.c
server_SOURCES = server.c
sizediff_SOURCES = sizediff.c
smtp_SOURCES = smtp.c
syslog_SOURCES = syslog.c
system_SOURCES = system.c
uid_open_SOURCES = uid_open.c
atexit_SOURCES = atexit.c
stdargs_SOURCES = stdargs.c
readB_SOURCES = readB.c
signal_example_SOURCES = signal_example.c
vector_SOURCES = vector.c

#man_MANS = man/cards.1

#EXTRA_DIST = $(man_MANS) VERSION 
